--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "yahoo-finance": "^0.3.6"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
